# learn-structs

./: CMakeLists.txt  README.md  main.cpp
interactions/: CMakeLists.txt  inclusion.cpp  inclusion.h  intersections.cpp  intersections.h
src/: CMakeLists.txt  main.cpp
src/interactions/: CMakeLists.txt  inclusion.cpp  intersection.cpp  intersection.h
src/structs/: CMakeLists.txt  circle.h  point.h  rect.cpp  rect.h
src/utils/: CMakeLists.txt  input.h  math.cpp  math.h
structs/: CMakeLists.txt  circle.cpp  point.cpp  point.h  rect.cpp  rect.h
tests/: CMakeLists.txt
tests/interactions_tests/: inclusion_test.cpp  intersection_test.cpp
tests/structs_tests/: circle_test.cpp  rect_test.cpp
utils/: CMakeLists.txt  input.cpp
utils/gtests/: CMakeLists.txt
